[package]
description = "Traversal-safe `Path` extractor for Axum"
edition = "2024"
license = "MIT"
name = "axum-safe-path"
keywords = ["axum", "path", "security", "traversal"]
categories = ["web-programming", "asynchronous"]
repository = "https://github.com/imbolc/axum-safe-path"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["form", "json"]
json = ["dep:serde", "axum/json"]
form = ["dep:serde", "axum/form"]

[dependencies]
axum = { version = "0.8", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
axum-test = "17"
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "usage"
required-features = ["form", "json"]

[lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "warn", priority = -1 }
keyword_idents = "forbid"
let_underscore = "forbid"
missing_docs = "forbid"
nonstandard_style = "forbid"
refining_impl_trait = "forbid"
rust_2018_compatibility = "forbid"
rust_2018_idioms = "forbid"
rust_2021_compatibility = "forbid"
rust_2024_compatibility = "forbid"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = "warn"
complexity = "warn"
expect_used = "warn"
indexing_slicing = "warn"
panic = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
nursery = { level = "warn", priority = -1 }
